Update to-do text chaning function
to-do 모두 완료시 you are awesome
제거시 기존 text
to-do 5개 입력시 더이상 입력 못하게 설정

--- a/css/toDoForm.css
+++ b/css/toDoForm.css
@@ -3,10 +3,17 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    align-items: center;
 }
 
+#toDoForm span {
+    font-size:inherit;
+    text-align: center;
+    width: 700px;
+}
 #toDoForm input,
 #toDoForm input:focus {
+    width: 400px;
     font-size: inherit;
     background: none;
     border: none;
