--- a/css/toDoList.css
+++ b/css/toDoList.css
@@ -1,14 +1,16 @@
 #toDoList {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     list-style: none;
+    width:400px;
 }
 
 #toDoList li {
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 5 10px;
     margin-bottom: 5px;
 }
